--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
           <h2>About Me</h2>
           <h5>CS & Entrepreneurship Student</h5>
           <p>
-            Highly motivated, strong learning skills, very good in working with
-            superiors and peers, detail-oriented.
+            "My name is Oren Nisim and I am highly motivated with strong
+            learning skills. I excel at working with superiors and peers, and
+            pay attention to detail in all tasks. I am a detail-oriented person
+            that always strive for excellence."
           </p>
         </div>
       </div>
@@ -85,7 +87,11 @@
               manner. Use AI to learn the viewer's patterns.
             </p>
             <p style="text-align: center">
-              <a class="button" href="#">Check Out</a>
+              <a
+                class="button"
+                href="https://www.canva.com/design/DAFVrOrhfJ0/Ca4IpIkSA9dd2Z8gqId7OA/view?utm_content=DAFVrOrhfJ0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                >Check Out</a
+              >
             </p>
           </div>
         </div>
@@ -220,11 +226,22 @@
         </p>
         <form action="">
           <input type="text" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="E-mail" required />
-          <input type="text" placeholder="Write a Subject" required />
+          <input
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            id="email"
+            required
+          />
+          <input
+            type="text"
+            placeholder="Write a Subject"
+            id="subject"
+            required
+          />
           <textarea
             name=""
-            id=""
+            id="body"
             cols="30"
             rows="10"
             placeholder="Your Message"
@@ -248,5 +265,6 @@
       </div>
     </footer>
     <!-- end of footer -->
+    <!-- send emails from my sites using smtp js -->
   </body>
 </html>
